Fixes content spacing issues

--- a/static/layout/_blog.scss
+++ b/static/layout/_blog.scss
@@ -62,7 +62,6 @@
 
       @media only screen and (max-width: $bp-header-fix) {
         grid-template-columns: 1fr;
-        grid-template-rows: repeat(4, 1fr);
       }
 
       p {
